--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://gsh06169.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /images/IMG_7165.png"
+logo                     : "/images/IMG_7165.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Sieun Kim"
-  avatar           : /images/IMG_0106.jpeg"
+  avatar           : "/images/IMG_0106.jpeg"
   bio              : "안녕하세요 :)"
   location         : "South Korea"
   email            :
