--- a/_config.yml
+++ b/_config.yml
@@ -268,5 +268,6 @@ defaults:
       related: true
       show_date: true
       breadcrumbs: true
+      sidebar_main: true
 
-date_fromat: %Y-%m-%d
+date_fromat: "%Y-%m-%d"
