--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/images/IMG_7165.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -267,7 +267,6 @@ defaults:
       share: true
       related: true
       show_date: true
-      breadcrumbs: true
       sidebar_main: true
 
-date_fromat: "%Y-%m-%d"
+date_format: "%Y-%m-%d"
